crates/tui/tests/snapshots/snapshot_jobs_tests__snapshot_jobs_screen_loading.snap
---
source: crates/tui/tests/snapshot_jobs_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│                               ⠋ Loading jobs...                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                 ┌──────────────────────────┐ │
│                                                 │ Onboarding [0/5] 0%      │ │
│                                                 │ ○ Create Profile         │ │
│                                                 │ ○ Test Connection        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ ⠋ Loading... 50% | Tab:Next | Shift+Tab:Prev | r:Refresh| ?:Help | q:Quit    │
└──────────────────────────────────────────────────────────────────────────────┘
