crates/tui/tests/snapshots/snapshot_jobs_tests__snapshot_jobs_screen_running_with_progress.snap
---
source: crates/tui/tests/snapshot_jobs_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│Sel  SID ↑                    Status          Duration   Results    Events    │
│[ ]  admin_search_with_progre Running (73%)   15.50s     250        500       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh /:Filter s:Sort a:Auto| ?:Help | q:Quit│
└──────────────────────────────────────────────────────────────────────────────┘
