crates/tui/tests/snapshots/snapshot_jobs_tests__snapshot_jobs_screen_with_data.snap
---
source: crates/tui/tests/snapshot_jobs_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Jobs | [?] Unknown                                               │
│ |                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌Search Jobs───────────────────────────────────────────────────────────────────┐
│Sel  SID ↑                    Status          Duration   Results    Events    │
│[ ]  scheduler_admin_search_1 Done            5.23s      100        500       │
│[ ]  admin_search_9876543210  Running (65%)   12.45s     450        2000      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                 ┌──────────────────────────┐ │
│                                                 │ Onboarding [0/5] 0%      │ │
│                                                 │ ○ Create Profile         │ │
│                                                 │ ○ Test Connection        │ │
│                                                 │ ○ Run Search             │ │
│                                                 └──────────────────────────┘ │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next | Shift+Tab:Prev | r:Refresh /:Filter s:Sort a:Auto| ?:Help | q:Quit│
└──────────────────────────────────────────────────────────────────────────────┘
